fixed scrollbar styling

--- a/src/components/Playlist/Playlist.module.scss
+++ b/src/components/Playlist/Playlist.module.scss
@@ -22,6 +22,8 @@
         max-height: 420px;
         overflow: auto;
         margin-top: 10px;
+        scrollbar-width: thin;
+        scrollbar-color: var(--scrollbar-color) transparent;
 
         .playlistItem {
             display: flex;
